:books: docs: Atualização das documentações Swagger
